@@ -6,6 +6,7 @@ Contract Configurator 1.30.0
 - Added Mission Control icons for Sentinel (KSP 1.3) and Robotics (Breaking Ground) stock contracts.
 - Allow apostrophe in AgentParser, fixes Kerbin-Side Jobs.
 - Improved some validation in Requirement nodes to throw certain errors at contract validation time instead of at run-time.
+- Fixed issue where biomes without a Celestial Body (targetBody) specified weren't smart enough to figure out which body they were for.
 
 Contract Configurator 1.29.0
 - Recompile against KSP 1.9.1.
